--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -674,20 +674,20 @@ video {
   left: 8.5rem;
 }
 
-.z-40 {
-  z-index: 40;
+.z-20 {
+  z-index: 20;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.z-30 {
-  z-index: 30;
+.z-40 {
+  z-index: 40;
 }
 
-.z-20 {
-  z-index: 20;
+.z-30 {
+  z-index: 30;
 }
 
 .mx-auto {
@@ -762,8 +762,8 @@ video {
   height: 100vh;
 }
 
-.h-9 {
-  height: 2.25rem;
+.h-16 {
+  height: 4rem;
 }
 
 .h-\[3\.5rem\] {
@@ -772,6 +772,10 @@ video {
 
 .h-5 {
   height: 1.25rem;
+}
+
+.h-9 {
+  height: 2.25rem;
 }
 
 .h-8 {
@@ -812,18 +816,6 @@ video {
 
 .h-14 {
   height: 3.5rem;
-}
-
-.h-11 {
-  height: 2.75rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-16 {
-  height: 4rem;
 }
 
 .max-h-\[85vh\] {
@@ -924,18 +916,6 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-44 {
-  width: 11rem;
-}
-
-.w-40 {
-  width: 10rem;
 }
 
 .w-14 {
@@ -1040,23 +1020,6 @@ video {
           animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
-@-webkit-keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1125,10 +1088,10 @@ video {
   row-gap: 1.25rem;
 }
 
-.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+.space-x-7 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
-  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -1203,30 +1166,6 @@ video {
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
 }
 
-.space-x-8 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-7 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .overflow-auto {
   overflow: auto;
 }
@@ -1239,12 +1178,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .rounded {
@@ -1310,6 +1249,11 @@ video {
   border-color: transparent;
 }
 
+.border-gray-600 {
+  --tw-border-opacity: 1;
+  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
@@ -1320,49 +1264,19 @@ video {
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
-.border-gray-600 {
+.border-\[\#E735A0\] {
   --tw-border-opacity: 1;
-  border-color: rgba(75, 85, 99, var(--tw-border-opacity));
-}
-
-.border-yellow-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(251, 191, 36, var(--tw-border-opacity));
-}
-
-.border-\[\#B02AF5\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(176, 42, 245, var(--tw-border-opacity));
-}
-
-.border-\[\#de4fe8\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(222, 79, 232, var(--tw-border-opacity));
-}
-
-.border-\[\#d4417e\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(212, 65, 126, var(--tw-border-opacity));
-}
-
-.border-\[\#b941d4\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(185, 65, 212, var(--tw-border-opacity));
-}
-
-.border-\[\#A350CC\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(163, 80, 204, var(--tw-border-opacity));
-}
-
-.border-t-yellow-500 {
-  --tw-border-opacity: 1;
-  border-top-color: rgba(245, 158, 11, var(--tw-border-opacity));
+  border-color: rgba(231, 53, 160, var(--tw-border-opacity));
 }
 
 .border-r-yellow-500 {
   --tw-border-opacity: 1;
   border-right-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
+.border-t-yellow-500 {
+  --tw-border-opacity: 1;
+  border-top-color: rgba(245, 158, 11, var(--tw-border-opacity));
 }
 
 .bg-gray-100 {
@@ -1373,6 +1287,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+
+.bg-\[\#E6349E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
 }
 
 .bg-yellow-400 {
@@ -1419,24 +1338,39 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
-.bg-pink-500 {
+.bg-\[\#1F0566\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(236, 72, 153, var(--tw-bg-opacity));
+  background-color: rgba(31, 5, 102, var(--tw-bg-opacity));
+}
+
+.bg-\[\#3204AC\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(50, 4, 172, var(--tw-bg-opacity));
+}
+
+.bg-\[\#DA437E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(218, 67, 126, var(--tw-bg-opacity));
+}
+
+.bg-\[\#B363BD\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(179, 99, 189, var(--tw-bg-opacity));
+}
+
+.bg-\[\#E735A0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(231, 53, 160, var(--tw-bg-opacity));
+}
+
+.bg-\[\#AE4DDE\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(174, 77, 222, var(--tw-bg-opacity));
 }
 
 .bg-\[\#B02AF5\] {
   --tw-bg-opacity: 1;
   background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
-}
-
-.bg-\[\#A350CC\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(163, 80, 204, var(--tw-bg-opacity));
-}
-
-.bg-\[\#E6349E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1504,10 +1438,6 @@ video {
   --tw-gradient-to: #fef3c7;
 }
 
-.bg-clip-border {
-  background-clip: border-box;
-}
-
 .bg-clip-text {
   -webkit-background-clip: text;
           background-clip: text;
@@ -1535,6 +1465,16 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1543,11 +1483,6 @@ video {
 .py-\[0\.29rem\] {
   padding-top: 0.29rem;
   padding-bottom: 0.29rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .px-\[18px\] {
@@ -1590,11 +1525,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1608,15 +1538,6 @@ video {
 .px-11 {
   padding-left: 2.75rem;
   padding-right: 2.75rem;
-}
-
-.py-0 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
 }
 
 .pt-1 {
@@ -1739,6 +1660,10 @@ video {
   padding-top: 5rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-5 {
   padding-left: 1.25rem;
 }
@@ -1759,17 +1684,12 @@ video {
   text-align: center;
 }
 
-.font-neon {
-  font-family: 'Quicksand', cursive;;
-}
-
 .font-sourceSansPro {
   font-family: 'Source Sans Pro', Arial, sans-serif;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.font-neon {
+  font-family: 'Quicksand', cursive;;
 }
 
 .text-\[1\.05rem\] {
@@ -1809,8 +1729,9 @@ video {
   line-height: 2.5rem;
 }
 
-.font-semibold {
-  font-weight: 600;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-extrabold {
@@ -1825,22 +1746,22 @@ video {
   font-weight: 300;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
-.text-transparent {
-  color: transparent;
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 
-.text-yellow-500 {
+.text-gray-600 {
   --tw-text-opacity: 1;
-  color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgba(31, 41, 55, var(--tw-text-opacity));
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1848,14 +1769,14 @@ video {
   color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 
 .text-yellow-600 {
@@ -1868,6 +1789,10 @@ video {
   color: rgba(210, 172, 74, var(--tw-text-opacity));
 }
 
+.text-transparent {
+  color: transparent;
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgba(156, 163, 175, var(--tw-text-opacity));
@@ -1876,11 +1801,6 @@ video {
 .text-gray-50 {
   --tw-text-opacity: 1;
   color: rgba(249, 250, 251, var(--tw-text-opacity));
-}
-
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 
 .text-\[\#EB5758\] {
@@ -1903,6 +1823,11 @@ video {
   color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
 
+.text-yellow-500 {
+  --tw-text-opacity: 1;
+  color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
@@ -1913,34 +1838,9 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
-.text-\[\#B02AF5\] {
+.text-\[\#E735A0\] {
   --tw-text-opacity: 1;
-  color: rgba(176, 42, 245, var(--tw-text-opacity));
-}
-
-.text-\[\#de4fe8\] {
-  --tw-text-opacity: 1;
-  color: rgba(222, 79, 232, var(--tw-text-opacity));
-}
-
-.text-\[\#d4417e\] {
-  --tw-text-opacity: 1;
-  color: rgba(212, 65, 126, var(--tw-text-opacity));
-}
-
-.text-\[\#b941d4\] {
-  --tw-text-opacity: 1;
-  color: rgba(185, 65, 212, var(--tw-text-opacity));
-}
-
-.text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-
-.text-pink-300 {
-  --tw-text-opacity: 1;
-  color: rgba(249, 168, 212, var(--tw-text-opacity));
+  color: rgba(231, 53, 160, var(--tw-text-opacity));
 }
 
 .underline {
@@ -2023,8 +1923,8 @@ video {
   transition-duration: 200ms;
 }
 
-.duration-150 {
-  transition-duration: 150ms;
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .duration-100 {
@@ -2033,10 +1933,6 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
 }
 
 .duration-1000 {
@@ -2071,6 +1967,11 @@ video {
   border-bottom-width: 4px;
 }
 
+.hover\:border-\[\#E6349E\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(230, 52, 158, var(--tw-border-opacity));
+}
+
 .hover\:border-yellow-600:hover {
   --tw-border-opacity: 1;
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
@@ -2080,64 +1981,49 @@ video {
   border-color: transparent;
 }
 
+.hover\:border-\[\#1F0566\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(31, 5, 102, var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#3204AC\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(50, 4, 172, var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#DA437E\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(218, 67, 126, var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#B363BD\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(179, 99, 189, var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#E735A0\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(231, 53, 160, var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#AE4DDE\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(174, 77, 222, var(--tw-border-opacity));
+}
+
 .hover\:border-\[\#B02AF5\]:hover {
   --tw-border-opacity: 1;
   border-color: rgba(176, 42, 245, var(--tw-border-opacity));
 }
 
-.hover\:border-\[\#A350CC\]:hover {
+.hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
-  border-color: rgba(163, 80, 204, var(--tw-border-opacity));
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
-.hover\:border-\[\#E6349E\]:hover {
+.hover\:border-gray-200:hover {
   --tw-border-opacity: 1;
-  border-color: rgba(230, 52, 158, var(--tw-border-opacity));
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-
-.hover\:bg-yellow-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-
-.hover\:bg-yellow-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-
-.hover\:bg-yellow-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#B02AF5\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#de4fe8\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(222, 79, 232, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#d4417e\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(212, 65, 126, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#b941d4\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(185, 65, 212, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#A350CC\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(163, 80, 204, var(--tw-bg-opacity));
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
 .hover\:bg-\[\#E6349E\]:hover {
@@ -2145,19 +2031,64 @@ video {
   background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
 }
 
-.hover\:text-yellow-500:hover {
-  --tw-text-opacity: 1;
-  color: rgba(245, 158, 11, var(--tw-text-opacity));
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.hover\:text-gray-50:hover {
-  --tw-text-opacity: 1;
-  color: rgba(249, 250, 251, var(--tw-text-opacity));
+.hover\:bg-\[\#1F0566\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(31, 5, 102, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#3204AC\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(50, 4, 172, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#DA437E\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(218, 67, 126, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#B363BD\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(179, 99, 189, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#E735A0\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(231, 53, 160, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#AE4DDE\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(174, 77, 222, var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#B02AF5\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
   color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+
+.hover\:text-yellow-500:hover {
+  --tw-text-opacity: 1;
+  color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
 .hover\:shadow-lg:hover {
@@ -2196,6 +2127,21 @@ video {
 .group:hover .group-hover\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-\[\#B02AF5\] {
+  --tw-text-opacity: 1;
+  color: rgba(176, 42, 245, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:duration-700 {
@@ -2248,12 +2194,17 @@ video {
   border-color: rgba(85, 85, 85, var(--tw-border-opacity));
 }
 
-.dark .dark\:bg-\[\#171717\] {
+.dark .dark\:border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
+.dark .dark\:bg-body {
   --tw-bg-opacity: 1;
   background-color: rgba(23, 23, 23, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#141414\] {
+.dark .dark\:bg-nav-footer {
   --tw-bg-opacity: 1;
   background-color: rgba(20, 20, 20, var(--tw-bg-opacity));
 }
@@ -2360,6 +2311,11 @@ video {
   color: rgba(173, 174, 173, var(--tw-text-opacity));
 }
 
+.dark .dark\:text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+
 .dark .dark\:opacity-40 {
   opacity: 0.4;
 }
@@ -2378,9 +2334,44 @@ video {
   border-color: transparent;
 }
 
+.dark .dark\:hover\:border-\[\#B02AF5\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(176, 42, 245, var(--tw-border-opacity));
+}
+
+.dark .dark\:hover\:border-gray-300:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
+.dark .dark\:hover\:border-gray-200:hover {
+  --tw-border-opacity: 1;
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+
 .dark .dark\:hover\:bg-\[\#363636\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(54, 54, 54, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-\[\#791c0c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
+}
+
+.hover\:dark:hover .hover\:dark\:bg-\[\#791c0c\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-\[\#86200e\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(134, 32, 14, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-\[\#992511\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(153, 37, 17, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-yellow-500:hover {
@@ -2400,6 +2391,16 @@ video {
 .dark .group:hover .dark\:group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
+}
+
+.dark .group:hover .dark\:group-hover\:text-\[\#B02AF5\] {
+  --tw-text-opacity: 1;
+  color: rgba(176, 42, 245, var(--tw-text-opacity));
+}
+
+.dark .group:hover .dark\:group-hover\:text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgba(209, 213, 219, var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -2565,14 +2566,6 @@ video {
     margin-top: auto;
   }
 
-  .lg\:mr-2 {
-    margin-right: 0.5rem;
-  }
-
-  .lg\:mr-4 {
-    margin-right: 1rem;
-  }
-
   .lg\:flex {
     display: flex;
   }
@@ -2640,48 +2633,12 @@ video {
     padding-right: 3rem;
   }
 
-  .lg\:pl-14 {
-    padding-left: 3.5rem;
+  .lg\:pl-5 {
+    padding-left: 1.25rem;
   }
 
   .lg\:pt-6 {
     padding-top: 1.5rem;
-  }
-
-  .lg\:pl-3 {
-    padding-left: 0.75rem;
-  }
-
-  .lg\:pl-0 {
-    padding-left: 0px;
-  }
-
-  .lg\:pl-1 {
-    padding-left: 0.25rem;
-  }
-
-  .lg\:pl-2 {
-    padding-left: 0.5rem;
-  }
-
-  .lg\:pl-4 {
-    padding-left: 1rem;
-  }
-
-  .lg\:pl-6 {
-    padding-left: 1.5rem;
-  }
-
-  .lg\:pl-10 {
-    padding-left: 2.5rem;
-  }
-
-  .lg\:pl-16 {
-    padding-left: 4rem;
-  }
-
-  .lg\:pl-5 {
-    padding-left: 1.25rem;
   }
 
   .lg\:text-5xl {
@@ -2726,24 +2683,8 @@ video {
     padding-right: 0px;
   }
 
-  .xl\:pl-10 {
-    padding-left: 2.5rem;
-  }
-
   .xl\:pt-36 {
     padding-top: 9rem;
-  }
-
-  .xl\:pl-4 {
-    padding-left: 1rem;
-  }
-
-  .xl\:pl-3 {
-    padding-left: 0.75rem;
-  }
-
-  .xl\:pl-1 {
-    padding-left: 0.25rem;
   }
 
   .xl\:text-lg {
