--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1202,6 +1202,10 @@ video {
   border-width: 2px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1218,6 +1222,18 @@ video {
   border-left-width: 4px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-l {
+  border-left-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
+}
+
 .border-solid {
   border-style: solid;
 }
@@ -1228,11 +1244,6 @@ video {
 
 .border-none {
   border-style: none;
-}
-
-.border-yellow-500 {
-  --tw-border-opacity: 1;
-  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
 }
 
 .border-gray-500 {
@@ -1259,14 +1270,14 @@ video {
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
+.border-yellow-500 {
+  --tw-border-opacity: 1;
+  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+}
+
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--tw-border-opacity));
-}
-
-.border-\[\#E735A0\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(231, 53, 160, var(--tw-border-opacity));
 }
 
 .border-r-yellow-500 {
@@ -1289,24 +1300,19 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
-.bg-\[\#E6349E\] {
+.bg-\[\#B02AF5\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
-}
-
-.bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+  background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
 }
 
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
 
 .bg-gray-200 {
@@ -1336,41 +1342,6 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.bg-\[\#1F0566\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(31, 5, 102, var(--tw-bg-opacity));
-}
-
-.bg-\[\#3204AC\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(50, 4, 172, var(--tw-bg-opacity));
-}
-
-.bg-\[\#DA437E\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(218, 67, 126, var(--tw-bg-opacity));
-}
-
-.bg-\[\#B363BD\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(179, 99, 189, var(--tw-bg-opacity));
-}
-
-.bg-\[\#E735A0\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(231, 53, 160, var(--tw-bg-opacity));
-}
-
-.bg-\[\#AE4DDE\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(174, 77, 222, var(--tw-bg-opacity));
-}
-
-.bg-\[\#B02AF5\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1475,16 +1446,6 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.py-\[0\.29rem\] {
-  padding-top: 0.29rem;
-  padding-bottom: 0.29rem;
-}
-
 .px-\[18px\] {
   padding-left: 18px;
   padding-right: 18px;
@@ -1518,6 +1479,11 @@ video {
 .px-\[12\%\] {
   padding-left: 12%;
   padding-right: 12%;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-10 {
@@ -1734,6 +1700,10 @@ video {
   line-height: 2rem;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .font-extrabold {
   font-weight: 800;
 }
@@ -1744,10 +1714,6 @@ video {
 
 .font-light {
   font-weight: 300;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .font-bold {
@@ -1838,11 +1804,6 @@ video {
   color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 
-.text-\[\#E735A0\] {
-  --tw-text-opacity: 1;
-  color: rgba(231, 53, 160, var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration: underline;
 }
@@ -1927,12 +1888,12 @@ video {
   transition-duration: 300ms;
 }
 
-.duration-100 {
-  transition-duration: 100ms;
-}
-
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
 }
 
 .duration-1000 {
@@ -1943,12 +1904,12 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.ease-linear {
-  transition-timing-function: linear;
-}
-
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.ease-linear {
+  transition-timing-function: linear;
 }
 
 .hover\:scale-125:hover {
@@ -1963,62 +1924,9 @@ video {
   transform: var(--tw-transform);
 }
 
-.hover\:border-b-4:hover {
-  border-bottom-width: 4px;
-}
-
-.hover\:border-\[\#E6349E\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(230, 52, 158, var(--tw-border-opacity));
-}
-
-.hover\:border-yellow-600:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(217, 119, 6, var(--tw-border-opacity));
-}
-
-.hover\:border-transparent:hover {
-  border-color: transparent;
-}
-
-.hover\:border-\[\#1F0566\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(31, 5, 102, var(--tw-border-opacity));
-}
-
-.hover\:border-\[\#3204AC\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(50, 4, 172, var(--tw-border-opacity));
-}
-
-.hover\:border-\[\#DA437E\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(218, 67, 126, var(--tw-border-opacity));
-}
-
-.hover\:border-\[\#B363BD\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(179, 99, 189, var(--tw-border-opacity));
-}
-
-.hover\:border-\[\#E735A0\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(231, 53, 160, var(--tw-border-opacity));
-}
-
-.hover\:border-\[\#AE4DDE\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(174, 77, 222, var(--tw-border-opacity));
-}
-
 .hover\:border-\[\#B02AF5\]:hover {
   --tw-border-opacity: 1;
   border-color: rgba(176, 42, 245, var(--tw-border-opacity));
-}
-
-.hover\:border-gray-300:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
 .hover\:border-gray-200:hover {
@@ -2026,44 +1934,8 @@ video {
   border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
-.hover\:bg-\[\#E6349E\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(230, 52, 158, var(--tw-bg-opacity));
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#1F0566\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(31, 5, 102, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#3204AC\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(50, 4, 172, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#DA437E\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(218, 67, 126, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#B363BD\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(179, 99, 189, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#E735A0\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(231, 53, 160, var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#AE4DDE\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(174, 77, 222, var(--tw-bg-opacity));
+.hover\:border-transparent:hover {
+  border-color: transparent;
 }
 
 .hover\:bg-\[\#B02AF5\]:hover {
@@ -2071,14 +1943,14 @@ video {
   background-color: rgba(176, 42, 245, var(--tw-bg-opacity));
 }
 
-.hover\:bg-yellow-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-}
-
 .hover\:bg-yellow-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
 .hover\:text-gray-100:hover {
@@ -2109,9 +1981,9 @@ video {
   overflow-y: auto;
 }
 
-.group:hover .group-hover\:text-yellow-600 {
+.group:hover .group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
-  color: rgba(217, 119, 6, var(--tw-text-opacity));
+  color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-pink-500 {
@@ -2129,19 +2001,9 @@ video {
   color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:text-\[\#B02AF5\] {
+.group:hover .group-hover\:text-yellow-600 {
   --tw-text-opacity: 1;
-  color: rgba(176, 42, 245, var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgba(209, 213, 219, var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgba(229, 231, 235, var(--tw-text-opacity));
+  color: rgba(217, 119, 6, var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:duration-700 {
@@ -2165,14 +2027,14 @@ video {
   border-color: rgba(75, 85, 99, var(--tw-divide-opacity));
 }
 
+.dark .dark\:border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+
 .dark .dark\:border-\[\#410e05\] {
   --tw-border-opacity: 1;
   border-color: rgba(65, 14, 5, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
 }
 
 .dark .dark\:border-\[\#3d3d3d\] {
@@ -2189,14 +2051,14 @@ video {
   border-color: rgba(75, 85, 99, var(--tw-border-opacity));
 }
 
+.dark .dark\:border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+
 .dark .dark\:border-\[\#555555\] {
   --tw-border-opacity: 1;
   border-color: rgba(85, 85, 85, var(--tw-border-opacity));
-}
-
-.dark .dark\:border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
 }
 
 .dark .dark\:bg-body {
@@ -2311,11 +2173,6 @@ video {
   color: rgba(173, 174, 173, var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-
 .dark .dark\:opacity-40 {
   opacity: 0.4;
 }
@@ -2325,53 +2182,23 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.dark .dark\:hover\:border-yellow-500:hover {
+.dark .dark\:hover\:border-gray-200:hover {
   --tw-border-opacity: 1;
-  border-color: rgba(245, 158, 11, var(--tw-border-opacity));
+  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
 }
 
 .dark .dark\:hover\:border-transparent:hover {
   border-color: transparent;
 }
 
-.dark .dark\:hover\:border-\[\#B02AF5\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(176, 42, 245, var(--tw-border-opacity));
-}
-
-.dark .dark\:hover\:border-gray-300:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.dark .dark\:hover\:border-gray-200:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+.dark .dark\:hover\:bg-\[\#992511\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(153, 37, 17, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-\[\#363636\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(54, 54, 54, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#791c0c\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
-}
-
-.hover\:dark:hover .hover\:dark\:bg-\[\#791c0c\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#86200e\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(134, 32, 14, var(--tw-bg-opacity));
-}
-
-.dark .dark\:hover\:bg-\[\#992511\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(153, 37, 17, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:text-yellow-500:hover {
@@ -2383,24 +2210,14 @@ video {
   border-style: none;
 }
 
-.dark .group:hover .dark\:group-hover\:text-yellow-500 {
-  --tw-text-opacity: 1;
-  color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-
 .dark .group:hover .dark\:group-hover\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
-.dark .group:hover .dark\:group-hover\:text-\[\#B02AF5\] {
+.dark .group:hover .dark\:group-hover\:text-yellow-500 {
   --tw-text-opacity: 1;
-  color: rgba(176, 42, 245, var(--tw-text-opacity));
-}
-
-.dark .group:hover .dark\:group-hover\:text-gray-300 {
-  --tw-text-opacity: 1;
-  color: rgba(209, 213, 219, var(--tw-text-opacity));
+  color: rgba(245, 158, 11, var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
